# edubot

./: .gitmodules  README.md
cpp_impl/src/controllers/config/: edubot_params.yaml  lerobot_params.yaml
cpp_impl/src/controllers/launch/: edubot_controller.launch.py  lerobot_controller.launch.py
cpp_impl/src/controllers/src/: example_traj.cpp
cpp_impl/src/edubot/: CMakeLists.txt
cpp_impl/src/edubot/include/edubot/: edubot_hw.hpp  robot_hw.hpp  robot_sim.hpp
cpp_impl/src/edubot/launch/: sim.launch.py
cpp_impl/src/edubot/src/: edubot_hw.cpp  edubot_sim.cpp  robot.cpp  robot_hw.cpp  robot_sim.cpp
cpp_impl/src/lerobot/: CMakeLists.txt  package.xml
cpp_impl/src/lerobot/launch/: rviz.launch.py  sim.launch.py
cpp_impl/src/lerobot/urdf/: lerobot.urdf
cpp_impl/src/robot/: CMakeLists.txt  package.xml
cpp_impl/src/robot/include/robot/: robot.hpp
cpp_impl/src/robot/src/: robot.cpp
cpp_impl/src/robot_core/src/: robot.cpp
docs/: Home.md  architecture.md  building-and-running.md  configuration.md  feetech-driver.md  fork-workflow.md  installation.md  lerobot-nodes.md  ros-interface.md  simulation-and-visualization.md  troubleshooting.md  writing-controllers.md
ros_ws/src/controllers/: CMakeLists.txt
ros_ws/src/controllers/config/: edubot_params.yaml  lerobot_params.yaml
ros_ws/src/controllers/include/controllers/: example_pos_traj.hpp  example_vel_traj.hpp
ros_ws/src/controllers/src/: example_pos_traj.cpp  example_traj.cpp  example_vel_traj.cpp
ros_ws/src/edubot/: CMakeLists.txt  package.xml
ros_ws/src/edubot/include/edubot/: edubot_hw.hpp  edubot_sim.hpp
ros_ws/src/edubot/src/: edubot_hw.cpp  edubot_sim.cpp
ros_ws/src/lerobot/: CMakeLists.txt  package.xml
ros_ws/src/lerobot/config/: lerobot_vel_sim.yaml  robot_hw.yaml  robot_read.yaml
ros_ws/src/lerobot/include/lerobot/: lerobot_hw.hpp  lerobot_read.hpp  lerobot_sim.hpp  path_publisher.hpp
ros_ws/src/lerobot/launch/: hw_position.launch.py  hw_velocity.launch.py  pink.launch.py  pink_velocity.launch.py  sim_position.launch.py  sim_velocity.launch.py
ros_ws/src/lerobot/scripts/: README_urdf_to_step.md  urdf_to_step.py
ros_ws/src/lerobot/src/: lerobot_hw.cpp  lerobot_read.cpp  lerobot_sim.cpp  path_publisher.cpp
ros_ws/src/lerobot/urdf/: lerobot.urdf  lerobot_home.stl
ros_ws/src/python_controllers/: package.xml  setup.py
ros_ws/src/python_controllers/python_controllers/: example_pos_traj.py  example_traj.py  example_vel_traj.py
ros_ws/src/robot_core/: CMakeLists.txt  package.xml
ros_ws/src/robot_core/include/robot/: robot.hpp
ros_ws/src/robot_core/include/robot_core/: robot.hpp
ros_ws/src/robot_core/src/: robot.cpp
ros_ws/src/robot_sim/: CMakeLists.txt  package.xml
ros_ws/src/robot_sim/include/robot_sim/: robot_sim.hpp
ros_ws/src/robot_sim/src/: robot_sim.cpp
testing/: test.cpp
ws/src/controllers/src/: example_traj.cpp
ws/src/controllers_python/: package.xml  setup.cfg  setup.py
ws/src/controllers_python/controllers_python/: example_traj.py
